# lampo.rs

./: .gitignore  .rustfmt.toml  1  CLAUDE.md  CODEOWNERS  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  README.md  TODO.md  flake.nix  lampo.example.conf  rust-toolchain.toml
.github/: FUNDING.yml  copilot-instructions.md  dependabot.yml
.github/ISSUE_TEMPLATE/: blank.md  bug_report.md  config.yml
.github/workflows/: audit.yml  build.yml  integration_testing.yml  lnprototest_testing.yml  mirroring.yml
agentshield/: .gitignore  README.md  go.mod  go.sum
agentshield/cmd/agentshield/: main.go
agentshield/docs/: DESIGN.md  DESIGN_CHOICES.md  TODO.md
agentshield/examples/: devops_agent.py  finance_agent.py  policy_demo.py
agentshield/internal/adapter/: adapter.go  admin.go  payment.go
agentshield/internal/api/: handler.go  middleware.go
agentshield/internal/model/: models.go
agentshield/internal/policy/: engine.go
agentshield/internal/store/: sqlite.go
agentshield/scripts/: reset_demo.sh  start_demo.sh
docker/: Dockerfile  Dockerfile.lnprototest  docker-compose.yaml  entrypoint.sh  install-bitcoind.sh  lnprototest-entrypoint.sh  lnprototest.env
docs/: PERSISTENCE.md
docs/brainstorms/: 2026-05-30-blip-0056-pos-notifications.md
docs/designs/: unified-chain-sync.md
examples/: persistence_demo.rs
lampo-ark-wallet/: Cargo.toml
lampo-ark-wallet/src/: lib.rs
lampo-async-jsonrpc/: Cargo.toml  README.md
lampo-async-jsonrpc/src/: async_types.rs  command.rs  errors.rs  json_rpc2.rs  lib.rs
lampo-bdk-wallet/: Cargo.toml
lampo-bdk-wallet/src/: lib.rs
lampo-bitcoind/: Cargo.toml
lampo-bitcoind/src/: lib.rs
lampo-c-ffi/: Cargo.toml  cbindgen.toml  liblampo.h
lampo-c-ffi/src/: lib.rs
lampo-chain/: Cargo.toml
lampo-chain/src/: lib.rs
lampo-cli/: Cargo.toml
lampo-cli/src/: args.rs  logger.rs  main.rs
lampo-client/: Cargo.toml
lampo-client/src/: lib.rs
lampo-common/: Cargo.toml
lampo-common/src/: backend.rs  btc_conf.rs  chacha20.rs  chainsync.rs  conf.rs  event.rs  handler.rs  keymanager.rs  keys.rs  lib.rs  logger.rs  model.rs  persist.rs  types.rs  vls.rs  wallet.rs
lampo-common/src/event/: liquidity.rs  ln.rs  onchain.rs
lampo-common/src/jsonrpc/: mod.rs
lampo-common/src/model/: close_channel.rs  connect.rs  getinfo.rs  invoice.rs  keysend.rs  network.rs  new_addr.rs  on_chain.rs  open_channel.rs  pos.rs  sync.rs
lampo-common/src/utils/: logger.rs  mod.rs  shutter.rs
lampo-core-wallet/: Cargo.toml
lampo-core-wallet/src/: lib.rs
lampo-grpc/: Cargo.toml  build.rs
lampo-grpc/lnrpc/invoicesrpc/: invoices.proto
lampo-grpc/lnrpc/lndkrpc/: lndkrpc.proto
lampo-grpc/lnrpc/routerrpc/: router.proto
lampo-grpc/lnrpc/signrpc/: signer.proto
lampo-grpc/lnrpc/walletrpc/: walletkit.proto
lampo-grpc/src/: lib.rs  server.rs
lampo-grpc/src/auth/: macaroon.rs  mod.rs  tls.rs
lampo-grpc/src/services/: lightning.rs  mod.rs
lampo-httpd/: Cargo.toml
lampo-httpd/src/: commands.rs  handler.rs  lib.rs  rest_protocol.rs
lampo-httpd/src/commands/: daemon.rs  inventory.rs  offchain.rs  onchain.rs  peer.rs
lampo-jsonrpc/: Cargo.toml
lampo-jsonrpc/src/: command.rs  errors.rs  json_rpc2.rs  lib.rs
lampo-lang-bind/lampo-py/: .gitignore  README.md  pyproject.toml
lampo-lang-bind/lampo-py/lampo_py/: __init__.py  lampo.py
lampo-lang-bind/lampo-py/tests/: conftest.py  test_init_node.py
lampo-lang-bind/lampo_dart/: CHANGELOG.md  LICENSE  README.md  analysis_options.yaml  changelog.json  pubspec.yaml
lampo-ldk-node/: Cargo.toml
lampo-ldk-node/src/: lib.rs
lampo-nakamoto/: Cargo.toml
lampo-nakamoto/src/: lib.rs
lampo-plugin/: Cargo.toml  build.rs
lampo-plugin-common/: Cargo.toml
lampo-plugin-common/src/: hooks.rs  lib.rs  manifest.rs  messages.rs  topics.rs
lampo-plugin-common/tests/: manifest_tests.rs
lampo-plugin-manager/: Cargo.toml
lampo-plugin-manager/src/: lib.rs  plugin_manager.rs
lampo-plugin-sdk/: Cargo.toml
lampo-plugin-sdk/examples/: channel_filter.rs  hello_world.rs
lampo-plugin-sdk/src/: io.rs  lib.rs
lampo-plugin-sdk/tests/: sdk_tests.rs
lampo-plugin/proto/: plugin.proto
lampo-plugin/src/: lib.rs  manager.rs  tls.rs
lampo-plugin/src/transport/: grpc.rs  mod.rs  stdio.rs
lampo-plugin/tests/: mock_plugin.sh  mock_plugin_hooks.sh  plugin_tests.rs
lampo-rgb/: Cargo.toml
lampo-rgb/src/: lib.rs  wallet.rs
lampo-testing/: Cargo.toml
lampo-testing/src/: lib.rs
lampo-vls/: Cargo.toml
lampo-vls/src/: frontend_starter.rs  keys_manager.rs  lib.rs  protocol_handler.rs  remote_signer.rs  signer.rs  signer_adapter.rs  util.rs
lampod/: Cargo.toml
lampod-cli/: Cargo.toml
lampod-cli/src/: args.rs  main.rs
lampod/src/: actions.rs  builtin.rs  command.rs  events.rs  handler.rs  jsonrpc.rs  lib.rs  liquidity.rs
lampod/src/actions/: handler.rs
lampod/src/backend/: mod.rs
lampod/src/chain/: blockchain.rs  mod.rs  wallet.rs
lampod/src/conf/: mod.rs
lampod/src/handler/: external_handler.rs
lampod/src/jsonrpc/: channels.rs  close_channel.rs  inventory.rs  offchain.rs  onchain.rs  open_channel.rs  peer_control.rs
lampod/src/keys/: keys.rs
lampod/src/ln/: channe_manager.rs  channel_manager.rs  events.rs  inventory_manager.rs  liquidity.rs  message_handler.rs  mod.rs  offchain_manager.rs  onion_message.rs  peer_event.rs  peer_manager.rs  pos.rs  route.rs
lampod/src/persistence/: filesystem.rs  ldk_adapter.rs  mod.rs  vss.rs
lampod/src/utils/: logger.rs  mod.rs
tests/lnprototest/: .gitignore  Makefile  pyproject.toml
tests/lnprototest/lampo_lnprototest/: __init__.py  runner.py
tests/lnprototest/tests/: conftest.py  test_bolt2-01-open_channel.py  test_bolt2-30-channel_type-open-accept-tlvs.py  test_warm_up.py
tests/tests/: Cargo.toml
tests/tests/src/: lampo_cln_tests.rs  lampo_tests.rs  lib.rs  utils.rs
tools/: check-wallet-decoupling.sh
tools/pylampo/: pyproject.toml
tools/pylampo-client/: client.py  pyproject.toml
tools/pylampo/pylampo_client/: __init__.py  client.py  deamon.py
tools/pylampo/tests/: test_api.py
(+5 files in other folders)
