[workspace]
members = [
        "lampo-common",
        "lampod",
        "lampod-cli",
        "lampo-cli",
        "lampo-httpd",
        "lampo-testing",
        "tests/tests",
        "lampo-chain",
        "lampo-bdk-wallet"
]

default-members = [
        "lampo-common",
        "lampod",
        "lampod-cli",
        "lampo-cli",
        "lampo-httpd",
        "lampo-chain",
        "lampo-bdk-wallet"
]
resolver = "2"
