[workspace]
members = [
        "lampo-common",
        "lampo-plugin-common",
        "lampo-plugin",
        "lampo-plugin-sdk",
        "lampod",
        "lampod-cli",
        "lampo-cli",
        "lampo-httpd",
        "lampo-testing",
        "tests/tests",
        "lampo-chain",
        "lampo-bdk-wallet"
]

default-members = [
        "lampo-common",
        "lampo-plugin-common",
        "lampo-plugin",
        "lampo-plugin-sdk",
        "lampod",
        "lampod-cli",
        "lampo-cli",
        "lampo-httpd",
        "lampo-chain",
        "lampo-bdk-wallet"
]
resolver = "2"
