[package]
name = "lampo-bdk-wallet"
version = "0.1.0"
edition = "2021"

[dependencies]
lampo-common = { path = "../lampo-common" }
bdk_wallet = { version = "1", features = ["file_store", "keys-bip39"] }
bdk_bitcoind_rpc = { version = "0.18" }
tokio = { version = "^1.29.1", features = ["rt-multi-thread", "parking_lot"] }
log = "*"