[package]
name = "lampo-bdk-wallet"
version = "0.1.0"
edition = "2021"

[dependencies]
lampo-common = { path = "../lampo-common" }
bdk_wallet = { version = "1.2", features = ["rusqlite", "keys-bip39"] }
bdk_bitcoind_rpc = { version = "0.19" }
tokio = { version = "^1.44.2", features = ["rt-multi-thread", "parking_lot", "signal"] }
tokio-cron-scheduler = { version = "*", features = ["signal"] }
chrono = { version = "0.4", default-features = false }
log = "*"