[package]
name = "lampo-c-ffi"
version = "0.1.0"
edition = "2021"

[lib]
name = "lampo"
crate-type = ["staticlib", "cdylib"]

[dependencies]
libc = "*"
log = "*"
lampod = { path = "../lampod" }
lampo-common = { path = "../lampo-common" }
lampo-jsonrpc = { path = "../lampo-jsonrpc" }
lampo-nakamoto = { path = "../lampo-nakamoto" }
lampo-bitcoind = { path = "../lampo-bitcoind" }
lampo-core-wallet = { path = "../lampo-core-wallet" }


[target.'cfg(target_os = "android")'.dependencies]
android_logger = "0.11"
