[package]
name = "lampo-chain"
version = "0.1.0"
edition = "2021"

[dependencies]
lampo-common = { path = "../lampo-common" }
lampod = { path = "../lampod" }
lightning-block-sync = { git = "https://github.com/tankyleo/rust-lightning.git", branch = "2025-01-signer-spks", features = [ "rpc-client" ] }
log = "0.4.17"
tokio ={ version = "*"}
base64 = "*"
serde = "*"
