[package]
name = "lampo-common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lightning = { version = "0.0.123", features = ["max_level_trace"] }
lightning-block-sync = { version = "0.0.123" }
lightning-persister = { version = "0.0.123" }
lightning-background-processor = { version = "0.0.123" }
lightning-net-tokio = { version = "0.0.123" }
lightning-rapid-gossip-sync = { version = "0.0.123" }
lightning-invoice = { version = "0.31" }
bitcoin = { version = "0.30.2", features = ["serde"] }
clightningrpc-conf = { git = "https://github.com/laanwj/cln4rust.git", branch = "master" }
crossbeam-channel = "0.5.8"
anyhow = "1.0.70"
colored = "1.9"
log = { version = "0.4", features = ["std"] }
chrono = { version = "0.4", features = ["std"], default-features = false }
serde_json = "1.0"
serde = "1.0"
hex = "0.4.3"

# FIXME: make this option and expose under a feature flag
paperclip = { version = "0.8.0", features = ["actix4"] }
