[package]
name = "lampo-common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lightning = { version = "0.1.2", features = [] }
lightning-block-sync = { version = "0.1.0" }
lightning-persister = { version = "0.1.0" }
lightning-background-processor = { version = "0.1", features = ["futures"] }
lightning-net-tokio = { version = "0.1.0" }
lightning-rapid-gossip-sync = { version = "0.1.0" }
lightning-invoice = { version = "0.33" }

async-trait = "0.1"
bitcoin = { version = "0.32", features = ["serde"] }
clightningrpc-conf = { git = "https://github.com/laanwj/cln4rust.git", branch = "master" }
crossbeam-channel = "0.5.15"
anyhow = "1.0.94"
colored = "3"
log = { version = "0.4", features = ["std"] }
chrono = { version = "0.4", features = ["std"], default-features = false }
serde_json = "1.0"
serde = "1.0"
hex = "0.4.3"

# FIXME: make this option and expose under a feature flag
paperclip = { version = "0.9.5", features = ["actix4"] }
