[package]
name = "lampo-common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
# Deterministic channel keys for testing only. Enables LDK's test-only
# InMemorySigner constructor; never enable in production builds.
unsafe_channel_keys = ["lightning/_test_utils"]

[dependencies]
lightning = { workspace = true, features = [] }
lightning-block-sync = { workspace = true }
lightning-persister = { workspace = true }
lightning-background-processor = { workspace = true }
lightning-net-tokio = { workspace = true }
lightning-rapid-gossip-sync = { workspace = true }

async-trait = "0.1"
bitcoin = { version = "0.32", features = ["serde"] }
clightningrpc-conf = { git = "https://github.com/laanwj/cln4rust.git", branch = "master" }
anyhow = "1.0.102"
colored = "3"
log = { version = "0.4", features = ["std"] }
chrono = { version = "0.4", features = ["std"], default-features = false }
serde_json = "1.0"
serde = "1.0"
hex = "0.4.3"

# FIXME: make this option and expose under a feature flag
paperclip = { version = "0.9.5", features = ["actix4"] }
tokio = { version = "1", features = ["sync"] }
