[package]
name = "lampo-core-wallet"
version = "0.1.0"
edition = "2021"

[dependencies]
log = "0.4.17"
lampo-common = { path = "../lampo-common" }
lampo-vls = { path = "../lampo-vls" }
bitcoincore-rpc = { version = "0.17.0", features = [] }
bitcoin-bech32 = "0.12"
bitcoin_hashes = "0.12.0"
serde = "1"
bdk = { version = "1.0.0-alpha.11", features = ["keys-bip39"] }
