[package]
name = "lampo-grpc"
version = "0.1.0"
edition = "2021"

[dependencies]
tonic = "0.11"
log = "*"
tonic-reflection = "0.11" 
prost = "0.12"
serde_json = "1.0"
futures = "0.3.28"
lampo-common = { path = "../lampo-common" }
lampod = { path = "../lampod" }
tokio = { version = "1", features = ["rt-multi-thread"] }

[build-dependencies]
tonic-build = "0.11"