[package]
name = "lampo-httpd"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
paperclip = { version = "0.9.5", features = ["actix4"] }
log = "*"
paste = "1.0.15"
serde = "*"
tokio = { version = "1", features = ["rt"] }

lampo-common = { path = "../lampo-common" }
lampod = { path = "../lampod" }

# FIXME: this should be optional
elite-rpc =  { version = "0.0.4", features = ["curl"] }
