[package]
name = "lampo-rgb"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rgb-lib = { version = "0.3.0-alpha.2", features = [
    "electrum",
    "esplora",
] }
# The error occurs here if we put `default-features = false` as all the code inside `lampo-common` is made on top of
# lightning and we are not importing the vanilla-lightning here.
lampo-common = { path = "../lampo-common", features = ["rgb"] }
bdk = "0.29.0"
