[package]
name = "lampo-rgb"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rgb-lib = { version = "0.3.0-alpha.2", features = [
    "electrum",
    "esplora",
] }
lampo-common = { path = "../lampo-common", default-features = false, features = ["rgb"] }
bdk = "0.29.0" # FIXME: why do you need this?
