[package]
name = "lampo-rgb"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lampod = { path = "../lampod", features = ["rgb"] }
lampo-common = { path = "../lampo-common", features = ["rgb"] }
log = "0.4.17"