[package]
name = "lampo-testing"
version = "0.1.0"
edition = "2021"

[dependencies]
lampod = { path = "../lampod" }
lampo-common = { path = "../lampo-common" }
lampo-chain = { path = "../lampo-chain" }
lampo-bdk-wallet = { path = "../lampo-bdk-wallet" }
lampo-httpd = { path = "../lampo-httpd" }

clightning-testing = { git = "https://github.com/laanwj/cln4rust.git", rev = "b4e5db582b474b31e1c280f09969ab148feee04f"}
log = "0.4.18"
tempfile = "3.19.1"
port-selector = "0.1.6"
anyhow = "1.0.94"
tokio = { version = "1.44.2", features = ["process", "time", "fs"] }
