[package]
name = "lampo-vls"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lampo-common = { path = "../lampo-common" }
triggered = "0.1.2"
url = "2.5.0"
async-trait = "0.1"
tonic = "0.9"
tokio = { version = "1", features = ["full"] }
vls-core = { git = "https://gitlab.com/lightning-signer/validating-lightning-signer", branch = "main" }
vls-proxy = { git = "https://gitlab.com/lightning-signer/validating-lightning-signer", branch = "main", features = ["developer"]}
