[package]
name = "lampod-cli"
version = "0.1.0"
edition = "2021"


[dependencies]
tokio = { version = "1.22.0", features = ["rt"] }
lexopt = { version = "0.3" }
filelock-rs = "0.1.0-beta.2"
log = { version = "0.4", features = ["std"] }
radicle-term = { git = "https://github.com/radicle-dev/heartwood.git" }
ctrlc = "3.4.0"

lampod = { package = "lampod", features = ["vanilla"], optional = true, path = "../lampod" }
lampo-common = { package = "lampo-common", optional = true, path = "../lampo-common" }
lampo-bitcoind = { path = "../lampo-bitcoind", optional = true }
lampo-jsonrpc = { path = "../lampo-jsonrpc", optional = true }
lampo-core-wallet = { path = "../lampo-core-wallet", optional = true }

# FIXME: rename to lampo-rgb-wallet
lampo-rgb = { path = "../lampo-rgb", optional = true }
rgb-lampod = { package = "lampod", optional = true, path = "../lampod", features = ["rgb"], default-features = false }
rgb-lampo-common = { package = "lampo-common", optional = true, path = "../lampo-common", default-features = false, features = ["rgb"] }

[features]
default = []
vanilla = ["lampod", "lampo-common", "lampo-bitcoind", "lampo-jsonrpc", "lampo-core-wallet"]
rgb = ["rgb-lampod", "rgb-lampo-common", "lampo-rgb"]