[package]
name = "lampod-cli"
version = "0.1.0"
edition = "2021"


[dependencies]
lampod = { path = "../lampod" }
lampo-common = { path = "../lampo-common" }
lampo-bitcoind = { path = "../lampo-bitcoind" }
lampo-core-wallet = { path = "../lampo-core-wallet" }
lampo-httpd = { path = "../lampo-httpd" }
tokio = { version = "1.22.0", features = ["rt", "macros"] }
lexopt = { version = "0.3" }
filelock-rs = "0.1.0-beta.2"
log = { version = "0.4", features = ["std"] }
ctrlc = "3.4.0"
radicle-term = "0.11.0"
