[package]
name = "lampod-cli"
version = "0.1.0"
edition = "2021"


[dependencies]
lampod = { path = "../lampod" }
lampo-common = { path = "../lampo-common" }
lampo-chain = { path = "../lampo-chain" }
lampo-bdk-wallet = { path = "../lampo-bdk-wallet" }
lampo-httpd = { path = "../lampo-httpd" }
tokio = { version = "1.45.1", features = ["rt", "macros"] }
clap = { version = "4.0", features = ["derive"] }
filelock-rs = "0.1.0-beta.2"
log = { version = "0.4", features = ["std"] }
ctrlc = "3.4.0"
radicle-term = "0.12.0"
