[package]
name = "lampod"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "^1.43.0", features = ["rt-multi-thread", "parking_lot"] }
lampo-common = { path = "../lampo-common" }
log = "0.4.17"
time = "0.3.37"
futures = "0.3.28"
crossbeam-channel = "0.5.8"
once_cell = "1.17.1"
async-trait = "0.1.68"
