[tool.poetry]
name = "lampo-py"
version = "0.0.1-alpha.4"
description = ""
authors = ["Vincenzo Palazzo <vincenzopalazzodev@gmail.com>"]
readme = "README.md"
packages = [{include = "lampo_py"}]

[tool.poetry.dependencies]
python = ">=3.7"
cffi = "^1.15.1"


[tool.poetry.group.dev.dependencies]
mypy = "^1.2.0"
pytest = "^7.3.1"
black = "^23.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
