[package]
name = "tests"
version = "0.1.0"
edition = "2021"

[dependencies]
lampo-common = { path = "../../lampo-common" }
lampo-testing = { path = "../../lampo-testing" }
tokio = { version = "1.47.1", features = ["rt-multi-thread", "macros"] }
tokio-test-shutdown-timeout = "0.0.2"
ntest = "0.9.0"
serde_json = "1"
log = "0.4"